[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartpasslib"
version = "1.2.0"
description = "Cross-platform library for generating smart passwords."
authors = [
    {name = "A.A Suvorov", email = "smartlegiondev@gmail.com"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/smartlegionlab/smartpasslib"

[tool.setuptools.packages.find]
where = ["."]