[metadata]
name = smartpasslib
version = attr: smartpasslib.__version__
author = A.A Suvorov
author_email = smartlegiondev@gmail.com
description = A cross-platform package of modules for generating, secure storage and recovery of complex, cryptographic, smart passwords on the fly.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/smartpasslib/
project_urls =
    Documentation = https://github.com/smartlegionlab/smartpasslib/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/smartpasslib/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    password generator
    smartpasslib
    smartlegionlab
    smart password generators
    smart password
    recoverable password

[options]
package_dir =
packages = find:
python_requires = >= 3.6
include_package_data = true
zip_safe = false
install_requires =

[coverage:run]
omit =
    venv/*
    .pytest_cache
    *__init__.py
